--- a/index.html
+++ b/index.html
@@ -26,6 +26,32 @@
             </ul>
         </nav>
     </header> 
+    <!-- hero -->
+    <div class="hero__container container">
+       <div class="hero-content">
+        <h3 class="hero-title">
+            Assalomu alekum <span>Ansor</span> milliy taomlar <br> saytga xush kelibsiz <br>
+            Bu sahifada fililarimizni manzillari bor
+        </h3>
+        <img class="hero-img" src="./img/tomchisomsa.png" alt="">
+       </div>
+    </div>
+    <!-- fililarimiz -->
+    <section class="section__container container">
+        <h3 class="section-title">Bizning filialarimiz</h3>
+        <div class="section__filial">
+            <div class="section-card">
+                <img class="section__card-img" src="" alt="">
+                <h5 class="section__card-h5">Ansor milliy taomlari <span>Marg'ilon</span> filiali</h5>
+                <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3034.908119351442!2d71.71981828946096!3d40.477297650254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38bb77b74fef62d7%3A0x840716dea3d82677!2sAnsor%20Mall!5e0!3m2!1sru!2s!4v1709022326232!5m2!1sru!2s">Kettik</a>
+            </div>
+            <div class="section-card">
+                <img class="section__card-img" src="" alt="">
+                <h5 class="section__card-h5">Ansor milliy taomlari <span>Farg'ona</span>filila</h5>
+                <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3034.908119351442!2d71.71981828946096!3d40.477297650254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38bb77b74fef62d7%3A0x840716dea3d82677!2sAnsor%20Mall!5e0!3m2!1sru!2s!4v1709022326232!5m2!1sru!2s">Kettik</a>
+            </div>
+        </div>
+    </section>
     <!-- footer -->
     <footer class="footer__container container">
         <div class="footer-nav-logo">
