--- a/index.html
+++ b/index.html
@@ -41,14 +41,16 @@
         <h3 class="section-title">Bizning filialarimiz</h3>
         <div class="section__filial">
             <div class="section-card">
-                <img class="section__card-img" src="" alt="">
-                <h5 class="section__card-h5">Ansor milliy taomlari <span>Marg'ilon</span> filiali</h5>
-                <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3034.908119351442!2d71.71981828946096!3d40.477297650254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38bb77b74fef62d7%3A0x840716dea3d82677!2sAnsor%20Mall!5e0!3m2!1sru!2s!4v1709022326232!5m2!1sru!2s">Kettik</a>
+                <img class="section__card-img" src="./img/nasormargilon.png" alt="">
+                <h5 class="section__card-h5"><span class="span1">Ansor</span> milliy
+                taomlari<br><span class="span1">Marg'ilon</span> filiali</h5>
+                <a class="card-btn" href="https://maps.app.goo.gl/TzLZb5YuAfC3ZhvH7" >Kettik</a>
             </div>
             <div class="section-card">
-                <img class="section__card-img" src="" alt="">
-                <h5 class="section__card-h5">Ansor milliy taomlari <span>Farg'ona</span>filila</h5>
-                <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3034.908119351442!2d71.71981828946096!3d40.477297650254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38bb77b74fef62d7%3A0x840716dea3d82677!2sAnsor%20Mall!5e0!3m2!1sru!2s!4v1709022326232!5m2!1sru!2s">Kettik</a>
+                <img class="section__card-img" src="./img/ansorfargonaprewiev1.png" alt="">
+                <h5 class="section__card-h5"> <span class="span1">Ansor</span> milliy
+                taomlari <br> <span class="span1">Farg'ona</span> filiali</h5>
+                <a class="card-btn" href="https://maps.app.goo.gl/kHSMnrXziHdj3M4W7">Kettik</a>
             </div>
         </div>
     </section>
