--- a/pages/foods.html
+++ b/pages/foods.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../img/ansorlogo-removebg-preview.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/ansorlogo.png" type="image/x-icon">
     <title>Ansor</title>
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/foods.css">
@@ -26,6 +26,24 @@
             </ul>
         </nav>
     </header> 
+    <!-- hero -->
+    <div class="hero__container container">
+        <div class="hero-milliyfood">
+            <h2 class="hero-title">Milliy taomlar</h2>
+            <img class="milliy-food" src="../img/dolma-removebg-preview.png" alt="">
+            <img class="milliy-food" src="../img/qovurmachuchvara-removebg-preview.png" alt="">
+            <img class="milliy-food" src="../img/mastava-removebg-preview.png" alt="">
+            <img class="milliy-food" src="../img/tomchisomsa.png" alt="">
+            <img class="milliy-food" src="../img/kozashorva-removebg-preview.png" alt="">
+            <img class="milliy-food" src="../img/noxatshorva-removebg-preview.png" alt="">
+            <img class="milliy-food" src="../img/xasib-removebg-preview.png" alt="">
+            <img class="milliy-food" src="../img/tandirgosht-removebg-preview.png" alt="">
+        </div>
+        <div class="hero-fastfood">
+            <h2 class="hero-fastfood-title">Fast food</h2>
+            <img src="../" alt="">
+        </div>
+    </div>
     <!-- footer -->
     <footer class="footer__container container">
         <div class="footer-nav-logo">
