--- a/pages/market.html
+++ b/pages/market.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../img/ansorlogo-removebg-preview.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/ansorlogo.png" type="image/x-icon">
     <title>Ansor</title>
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/market.css">
@@ -26,7 +26,36 @@
             </ul>
         </nav>
     </header> 
-    <!--  -->
+    <!-- hero section -->
+    <div class="hero__section__container container">
+        <h2 class="product-title">Bizning bozorimiz</h2>
+        <div class="waters">
+            <div class="waters-block">
+                <img class="waters__block-img" src="../img/coccola-removebg-preview.png" alt="">
+            </div>
+            <div class="waters-block">
+                <img class="waters__block-img" src="../img/fanta-removebg-preview.png" alt="">
+            </div>
+            <div class="waters-block">
+                <img class="waters__block-img1" src="../img/pepesi-removebg-preview.png" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- product -->
+    <div class="product__container container">
+        <div class="product-img1">
+            <img class="product" src="../img/piyoz-removebg-preview.png" alt="">
+            <img class="product" src="../img/kartoshka-removebg-preview.png" alt="">
+            <img class="product" src="../img/karam-removebg-preview.png" alt="">
+            <img class="product" src="../img/mosh-removebg-preview.png" alt="">
+        </div>  
+        <div class="product-img2">
+            <img class="product1" src="../img/shokalad-removebg-preview.png" alt="">
+            <img class="product1" src="../img/tozalik-removebg-preview.png" alt="">
+            <img class="product1" src="../img/atir-removebg-preview.png" alt="">
+            <img class="product1" src="../img/qovuntarvuz.png" alt="">
+        </div>
+    </div>
     <!-- footer -->
     <footer class="footer__container container">
         <div class="footer-nav-logo">
