--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./img/ansorlogo-removebg-preview.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/ansorlogo.png" type="image/x-icon">
     <title>Ansor</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/index.css">
