--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
        <div class="hero-content">
         <h3 class="hero-title">
             Assalomu alekum <span>Ansor</span> milliy taomlar <br> saytga xush kelibsiz <br>
-            Bu sahifada fililarimizni manzillari bor
+            Bu sahifada fililarimizni manzillarimiz bor
         </h3>
         <img class="hero-img" src="./img/tomchisomsa.png" alt="">
        </div>
@@ -73,7 +73,7 @@
         <div class="footer__connection">
             <h4 class="footer__content">Biz bilan bog'lanish</h4>
             <div class="local__content">
-                <a href="tel:+9988 531-55-55"><ion-icon name="call">Telefon</ion-icon>
+                <a href="tel:+99885315555"><ion-icon name="call">Telefon</ion-icon>
                 <h4 class="content-h4">Telefon</h4>
                 </a>
                 <a href="https://www.instagram.com/ansor_sm/"><ion-icon name="logo-instagram"></ion-icon>
