--- a/pages/foods.html
+++ b/pages/foods.html
@@ -33,7 +33,7 @@
             <img class="milliy-food" src="../img/dolma-removebg-preview.png" alt="">
             <img class="milliy-food" src="../img/qovurmachuchvara-removebg-preview.png" alt="">
             <img class="milliy-food" src="../img/mastava-removebg-preview.png" alt="">
-            <img class="milliy-food" src="../img/tomchisomsa.png" alt="">
+            <img class="milliy-food" src="../img/tomchisomsa.png" alt=""><br>
             <img class="milliy-food" src="../img/kozashorva-removebg-preview.png" alt="">
             <img class="milliy-food" src="../img/noxatshorva-removebg-preview.png" alt="">
             <img class="milliy-food" src="../img/xasib-removebg-preview.png" alt="">
