--- a/pages/kids.html
+++ b/pages/kids.html
@@ -26,6 +26,35 @@
             </ul>
         </nav>
     </header> 
+    <!-- kids hero-->
+    <div class="hero__container container">
+        <div class="hero__img__content">
+            <div class="hero__content-img">
+                <img class="hero-img2" src="../img/ansor-kids-3-removebg-preview.png" alt="">
+                <p class="hero__content-prg">
+                    Bu yerda Kids bo'limi <br> bu yerda bolalar uchun o'yingohlar <br> mavjud!!
+                </p>
+                <img class="hero-img2" src="../img/ansor-kids-4-removebg-preview.png" alt="">
+            </div>
+            <div class="hero-img">
+                <img class="hero-img1" src="../img/ansor-kids-removebg-preview.png" alt="">
+                <img class="hero-img1" src="../img/ansor-kids-1-removebg-preview.png" alt="">
+                <img class="hero-img1" src="../img/ansor-kids-2-removebg-preview.png" alt="">
+            </div>
+        </div>      
+    </div>
+    <!-- section -->
+    <div class="section__container container">
+        <div class="section-img">
+            <img class="section-img1" src="../img/ansor-kids-5-removebg-preview.png" alt="">
+            <img class="section-img2" src="../img/ansor-kids-6-removebg-preview.png" alt="">
+            <img class="section-img3" src="../img/ansor-kids-7.png" alt="">
+        </div>
+        <p class="section__content-p">
+            Bizni saytimiz yoqqan bo'lsa br <br> sizni taklif etamiz <br>
+            Shuni unutmang bolangiz <br> nazorat ostida!! bo'ladi
+        </p>
+    </div>
     <!-- footer -->
     <footer class="footer__container container">
         <div class="footer-nav-logo">
@@ -45,8 +74,8 @@
         <div class="footer__connection">
             <h4 class="footer__content">Biz bilan bog'lanish</h4>
             <div class="local__content">
-                <a href="tel:+9988 531-55-55"><ion-icon name="call">Telefon</ion-icon>
-                <h4 class="content-h4">Telefon</h4>
+                <a href="tel:+998 88 531-55-55"><ion-icon name="call"></ion-icon> 
+                <h4 class="content-h4">Telefon <br> +998 88 531-55-55</h4>
                 </a>
                 <a href="https://www.instagram.com/ansor_sm/"><ion-icon name="logo-instagram"></ion-icon>
                 <h4 class="content-h4">Instagram</h4>
