--- a/pages/market.html
+++ b/pages/market.html
@@ -14,7 +14,7 @@
     <!-- header -->
     <header class="header__container container">
         <div class="header__logo">
-            <a href="../index.html">
+            <a class="logo-img" href="../index.html">
                 <img class="logo-img" src="../img/ansorlogo1.png" alt="Bu yerda logo bor">
             </a>
         </div>
