--- a/pages/foods.html
+++ b/pages/foods.html
@@ -39,9 +39,18 @@
             <img class="milliy-food" src="../img/xasib-removebg-preview.png" alt="">
             <img class="milliy-food" src="../img/tandirgosht-removebg-preview.png" alt="">
         </div>
-        <div class="hero-fastfood">
-            <h2 class="hero-fastfood-title">Fast food</h2>
-            <img src="../" alt="">
+    </div>
+    <div class="section-fastfood__container container">
+        <div class="section-fastfood">
+            <h2 class="section-fastfood-title">Fast food</h2>
+            <div class="fastfood__img">
+                <img class="fastfood-img" src="../img/hotdog-removebg-preview.png" alt="">
+                <img class="fastfood-img" src="../img/hotdog-removebg-preview.png" alt="">
+                <img class="fastfood-img" src="../img/hotdog-removebg-preview.png" alt=""> <br>
+                <img class="fastfood-img" src="../img/hotdog-removebg-preview.png" alt="">
+                <img class="fastfood-img" src="../img/hotdog-removebg-preview.png" alt="">
+                <img class="fastfood-img" src="../img/hotdog-removebg-preview.png" alt="">
+            </div>
         </div>
     </div>
     <!-- footer -->
