--- a/pages/kids.html
+++ b/pages/kids.html
@@ -75,9 +75,9 @@
             <h4 class="footer__content">Biz bilan bog'lanish</h4>
             <div class="local__content">
                 <a href="tel:+998 88 531-55-55"><ion-icon name="call"></ion-icon>
-                <h4 class="content-h4">Telefon <br> +998 88 531-55-55</h4>
+                <h4 class="content-h4">Telefon</h4>
                 </a>
-                <a href="https://www.instagram.com/ansor_sm/">
+                <a href="https://www.instagram.com/ansor_sm/"><ion-icon name="logo-instagram"></ion-icon>
                 <h4 class="content-h4">Instagram</h4>
                 </a>
                 <a href="t.me/ansor_sm
