--- a/index.html
+++ b/index.html
@@ -19,10 +19,17 @@
             </a>
         </div>
         <nav class="header__nav">
+            <!-- <ul class="sidebar">
+                <li onclick="hideSidebar()">Close<a href="#"></a></li>
+                <li class="header__menu-item"><a href="./pages/market.html">Market</a></li>
+                <li class="header__menu-item"><a href="./pages/foods.html">Foods</a></li>
+                <li class="header__menu-item"><a href="./pages/kids.html">Kids</a></li>
+            </ul> -->
             <ul class="header__menu">
                 <li class="header__menu-item"><a href="./pages/market.html">Market</a></li>
                 <li class="header__menu-item"><a href="./pages/foods.html">Foods</a></li>
                 <li class="header__menu-item"><a href="./pages/kids.html">Kids</a></li>
+                <!-- <li class="menu-button" onclick="showSidebar()"><a href="#">Menu</a></li> -->
             </ul>
         </nav>
     </header> 
@@ -73,7 +80,7 @@
         <div class="footer__connection">
             <h4 class="footer__content">Biz bilan bog'lanish</h4>
             <div class="local__content">
-                <a href="tel:+99885315555"><ion-icon name="call">Telefon</ion-icon>
+                <a href="tel:+99885315555"><ion-icon name="call"></ion-icon>
                 <h4 class="content-h4">Telefon</h4>
                 </a>
                 <a href="https://www.instagram.com/ansor_sm/"><ion-icon name="logo-instagram"></ion-icon>
@@ -87,5 +94,6 @@
         </div>
     </footer>
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 </html>
