--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uz">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,8 +37,8 @@
     <div class="hero__container container">
        <div class="hero-content">
         <h3 class="hero-title">
-            Assalomu alekum <span>Ansor</span> milliy taomlar <br> saytga xush kelibsiz <br>
-            Bu sahifada fililarimizni manzillarimiz bor
+            Assalomu alekum <span class="hero-span1">Ansor</span> milliy taomlar <br> saytga xush kelibsiz <br>
+            Bu sahifada filialarimizni manzillari bor!!
         </h3>
         <img class="hero-img" src="./img/tomchisomsa.png" alt="">
        </div>
@@ -80,7 +80,7 @@
         <div class="footer__connection">
             <h4 class="footer__content">Biz bilan bog'lanish</h4>
             <div class="local__content">
-                <a href="tel:+99885315555"><ion-icon name="call"></ion-icon>
+                <a href="tel:+99885315555"><ion-icon name="call">Telefon</ion-icon>
                 <h4 class="content-h4">Telefon</h4>
                 </a>
                 <a href="https://www.instagram.com/ansor_sm/"><ion-icon name="logo-instagram"></ion-icon>
@@ -93,6 +93,7 @@
             </div>
         </div>
     </footer>
+    <!-- script conection -->
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     <script src="./js/app.js"></script>
 </body>
